// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render correctly 1`] = `
<Checkbox__CheckboxWrapper
  bg="primary"
  borderColor="primary"
  circle={false}
  disabled={false}
  height={19}
  width={19}
>
  <Checkbox
    className=""
    defaultChecked={false}
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    prefixCls="rc-checkbox"
    style={Object {}}
    type="checkbox"
  />
</Checkbox__CheckboxWrapper>
`;

exports[`Checkbox should render with props circle, checked and disabled 1`] = `
<Checkbox__CheckboxWrapper
  bg="primary"
  borderColor="primary"
  circle={true}
  disabled={true}
  height={19}
  width={19}
>
  <Checkbox
    checked={true}
    className=""
    defaultChecked={false}
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    prefixCls="rc-checkbox"
    style={Object {}}
    type="checkbox"
  />
</Checkbox__CheckboxWrapper>
`;
